# hosta-homework

./: .gitignore  README.md  pyproject.toml
hosta_homework/: __init__.py  __main__.py  data.py  dataclasses.py  model.py
hosta_homework/model/: __init__.py  correction_file.py  image_file.py  room.py
tests/: test_data.py  test_dataclasses.py  test_model.py
