[tool.poetry]
name = "hosta-homework"
version = "0.1.0"
description = "Elliot Rivers's submission for the Hosta.ai interview task"
authors = ["Elliot Rivers <elliot.j.rivers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
